third_party/blink/renderer/core/layout/ng/ng_layout_input_node.cc
@@ -80,26 +80,16 @@ MinMaxSize NGLayoutInputNode::ComputeMinMaxSize(
 }
 
 void NGLayoutInputNode::IntrinsicSize(
-    NGLogicalSize* default_intrinsic_size,
     base::Optional<LayoutUnit>* computed_inline_size,
     base::Optional<LayoutUnit>* computed_block_size,
     NGLogicalSize* aspect_ratio) const {
   DCHECK(IsReplaced());
-
-  LayoutSize box_intrinsic_size = box_->IntrinsicSize();
-  // Transform to logical coordinates if needed.
-  if (!Style().IsHorizontalWritingMode())
-    box_intrinsic_size = box_intrinsic_size.TransposedSize();
-  *default_intrinsic_size =
-      NGLogicalSize(box_intrinsic_size.Width(), box_intrinsic_size.Height());
-
   if (ShouldApplySizeContainment()) {
     *computed_inline_size = LayoutUnit();
     *computed_block_size = LayoutUnit();
     *aspect_ratio = NGLogicalSize(LayoutUnit(), LayoutUnit());
     return;
   }
-
   IntrinsicSizingInfo legacy_sizing_info;
 
   ToLayoutReplaced(box_)->ComputeIntrinsicSizingInfo(legacy_sizing_info);
